lint & format - final W04
